--- a/.github/workflows/ms-spotify.yml
+++ b/.github/workflows/ms-spotify.yml
@@ -2,7 +2,7 @@ name: check Spotify MS
 
 on:
   schedule:
-    - cron: '30 * * * *'
+    - cron: '25 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -17,4 +17,4 @@ jobs:
         shell: pwsh
         run: ./ms-spotify-check.ps1
         env:
-          TAG: ${{ secrets.TAG }}
+          Token: ${{ secrets.Token }}
